Added favicon and Header. started on buttons for changing colors

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Etch a Sketch</title>
+    <link rel="icon" type="image/x-icon" href="./img/pen.png">
 </head>
 <body>
-    
+    <h1> Etch a Sketch </h1>
+    <div class="buttons">
+        <button id="White"> White </button>
+        <button id="Black"> Black </button>
+    </div>
     <div class="container">
-        <div class="grid">
-
-        </div>
+        <div class="grid"></div>
     </div>
     <script src="script.js"></script>
 </body>
