Added event, change color to buttons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1> Etch a Sketch </h1>
     <div class="buttons">
-        <button id="White"> White </button>
-        <button id="Black"> Black </button>
+        <button id="white"> White </button>
+        <button id="black"> Black </button>
     </div>
     <div class="container">
         <div class="grid"></div>
