Added slider in Html and Css stulingfor number of squares in grid. got frustrated with styling so got some help from my friend gippity again

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 <body>
     <h1> Etch a Sketch </h1>
     <div class="buttons">
-        <button id="white"> White </button>
-        <button id="black"> Black </button>
+        <button id="white"> Whiteish </button>
+        <button id="black"> Blackish </button>
     </div>
     <div class="container">
         <div class="grid"></div>
+    </div>
+    <div class="slider_container">
+        <input type="range" class="slider" id ="range" min="5" max="100">
+        <div class="value">20</div>
     </div>
     <script src="script.js"></script>
 </body>
