Added js to slider where slider and slider value is connected

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="grid"></div>
     </div>
     <div class="slider_container">
-        <input type="range" class="slider" id ="range" min="5" max="100">
-        <div class="value">20</div>
+        <input type="range" class="slider" id ="range" min="5" max="100" value = "10">
+        <div class="slider_value">10</div>
     </div>
     <script src="script.js"></script>
 </body>
