added h2 to slider

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="container">
         <div class="grid"></div>
     </div>
+    
     <div class="slider_container">
+        <h2> Resize Grid</h2>
         <input type="range" class="slider" id ="range" min="5" max="100" value = "10">
         <div class="slider_value">10</div>
     </div>
