Added two new buttons and created to divs to handle putting two buttons vertically on top of each other.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
     <h1> Etch a Sketch </h1>
     <div class="buttons">
-        <button id="white"> Whiteish </button>
-        <button id="black"> Blackish </button>
+        <div class="btns1">
+            <button id="white"> Whiteish </button>
+            <button id="black"> Blackish </button>
+        </div>
+        <div class="btns1">
+            <button id="black"> Randome </button>
+            <button id="black"> Blackish </button>
+        </div>
     </div>
     <div class="container">
         <div class="grid"></div>
