Button style imprivement

--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 <body>
     <h1> Etch a Sketch </h1>
     <div class="buttons">
-        <div class="btns1">
             <button id="white"> Whiteish </button>
             <button id="black"> Blackish </button>
-        </div>
-        <div class="btns1">
             <button id="black"> Randome </button>
-            <button id="black"> Blackish </button>
-        </div>
+            <button id="black"> Grayscale </button>
     </div>
     <div class="container">
         <div class="grid"></div>
