Added randome button that filles inn random rgb color. Started on grayscale button, but decided to drop it because i use the nice wihteish and blackish color... I might come back and add it in the future.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <div class="buttons">
             <button id="white"> Whiteish </button>
             <button id="black"> Blackish </button>
-            <button id="black"> Randome </button>
-            <button id="black"> Grayscale </button>
+            <button id="rand"> Randome </button>
+            <!-- 
+            <button id="gray"> Grayscale </button>
+            -->
     </div>
     <div class="container">
         <div class="grid"></div>
